--- a/全友家居/index.html
+++ b/全友家居/index.html
@@ -128,7 +128,7 @@
                 <img src="./images/slide-1.jpg" alt="">
             </li>
         </ul>
-        <ol>
+        <ol class="clearfix">
             <li class="current"></li>
             <li></li>
             <li></li>
@@ -137,7 +137,40 @@
     </div>
     <!-- 时间 -->
     <div class="qy-time">
-        <!-- <div class="container"></div> -->
+        <div class="container">
+            <a href="javascript:;">
+                <div>创建于</div>
+                <div>1986</div>
+                <div>年</div>
+            </a>
+            <a href="javascript:;">
+                <div>全球</div>
+                <div>3</div>
+                <div>大研发中心</div>
+            </a>
+            <a href="javascript:;">
+                <div>首批认证</div>
+                <div>5</div>
+                <div>星绿色供应链</div>
+            </a>
+            <a href="javascript:;">
+                <div>幸福</div>
+                <div>365</div>
+                <div>服务</div>
+            </a>
+        </div>
+    </div>
+    <!-- 第二个轮播图 -->
+    <div class="qy-silder-two">
+        <div class="container">
+            <div class="qy-silder-two-main">
+                <ul></ul>
+                <ul></ul>
+                <ul></ul>
+                <ul></ul>
+                <ul></ul>
+            </div>
+        </div>
     </div>
     <script src="./lib/jquery/jquery-3.4.1.min.js"></script>
     <script src="./js/index.js"></script>
