--- a/house.html
+++ b/house.html
@@ -27,14 +27,20 @@
     </div>
     <!-- 搜索框 -->
     <div class="house-search">
-        <div class="container">
+        <div class="container clearfix">
             <div class="house-search-logo">
                 <a href="javascript:;">
                     <img src="./images/house/logo.png" alt="">
                 </a>
             </div>
-            <div class="house-search-main">
-
+            <div class="house-search-main clearfix">
+                <div class="house-search-main-top">
+                    <input type="text">
+                </div>
+                <a href="javascript:;" class="house-search-main-bottom">
+                    <i></i>
+                    <span>搜 索</span>
+                </a>
             </div>
         </div>
     </div>
