--- a/house.html
+++ b/house.html
@@ -34,13 +34,147 @@
                 </a>
             </div>
             <div class="house-search-main clearfix">
-                <div class="house-search-main-top">
-                    <input type="text">
+                <div class="house-search-main-one clearfix">
+                    <div class="house-search-main-top">
+                        <input type="text">
+                    </div>
+                    <a href="javascript:;" class="house-search-main-bottom">
+                        <i></i>
+                        <span>搜 索</span>
+                    </a>
                 </div>
-                <a href="javascript:;" class="house-search-main-bottom">
+                <div class="house-search-main-two">
+                    <a href="javascript:;">衣柜</a>
+                    <a href="javascript:;">电视柜</a>
+                    <a href="javascript:;">榻榻米</a>
+                    <a href="javascript:;">酒柜</a>
+                    <a href="javascript:;">衣帽间</a>
+                    <a href="javascript:;">玄关柜</a>
+                </div>
+            </div>
+            <div class="house-search-right">
+                <div class="house-search-right-one">
+                    <img src="./images/house/green.png" alt="">
+                </div>
+                <div class="house-search-right-two">
+                    <img src="./images/house/qcrode.jpg" alt="">
+                    <p>扫码领取免费设计</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 导航 -->
+    <div class="house-nav clearfix">
+        <div class="container">
+            <div class="house-nav-left">
+                <div class="house-nav-left-mian">
                     <i></i>
-                    <span>搜 索</span>
-                </a>
+                    <p>全部空间分类</p>
+                </div>
+                <div class="house-nav-left-bottom clearfix">
+                    <li>
+                        <div class="nav-one clearfix">
+                            <div>
+                                <i class="room"></i>
+                                <p>卧室</p>
+                            </div>
+                            <ul class="clearfix">
+                                <li><a href="javascript:;">全屋定制</a></li>
+                                <li>/</li>
+                                <li><a href="javascript:;">浅色系</a></li>
+                                <li>/</li>
+                                <li><a href="javascript:;">简约欧式风格</a></li>
+                            </ul>
+                        </div>
+                        <div class="nav-two clearfix">
+                            <h3>风格</h3>
+                            <ul class="clearfix">
+                                <li>
+                                    <a href="javascript:;">所有</a>
+                                </li>
+                                <li>/</li>
+                                <li><a href="javascript:;">简约欧式风格</a></li>
+                                <li>/</li>
+                                <li><a href="javascript:;">日式风格</a></li>
+                                <li>/</li>
+                                <li><a href="javascript:;">新中式</a></li>
+                                <li>/</li>
+                                <li><a href="javascript:;">现代简约</a></li>
+                                <li>/</li>
+                                <li><a href="javascript:;">欧美古典</a></li>
+                                <li>/</li>
+                                <li><a href="javascript:;">现代时尚</a></li>
+                                <li>/</li>
+                                <li><a href="javascript:;">自然乡村</a></li>
+                            </ul>
+                            <h3>功能</h3>
+                            <ul class="clearfix">
+                                <li>
+                                    <a href="javascript:;">所有</a>
+                                </li>
+                                <li>/</li>
+                                <li><a href="javascript:;">全屋定制</a></li>
+                                <li>/</li>
+                                <li><a href="javascript:;">衣柜</a></li>
+                                <li>/</li>
+                                <li><a href="javascript:;">床+床头柜</a></li>
+                                <li>/</li>
+                                <li><a href="javascript:;">梳妆台</a></li>
+                                <li>/</li>
+                                <li><a href="javascript:;">飘窗</a></li>
+                                <li>/</li>
+                                <li><a href="javascript:;">衣帽间</a></li>
+                            </ul>
+                            <h3>色系</h3>
+                            <ul class="clearfix">
+                                <li>
+                                    <a href="javascript:;">所有</a>
+                                </li>
+                                <li>/</li>
+                                <li><a href="javascript:;">浅色系</a></li>
+                                <li>/</li>
+                                <li><a href="javascript:;">深色系</a></li>
+                                <li>/</li>
+                                <li><a href="javascript:;">多色可选</a></li>
+                            </ul>
+                            <h3>面积</h3>
+                            <ul class="clearfix">
+                                <li>
+                                    <a href="javascript:;">所有</a>
+                                </li>
+                                <li>/</li>
+                                <li><a href="javascript:;">12m²以下</a></li>
+                                <li>/</li>
+                                <li><a href="javascript:;">20㎡</a></li>
+                                <li>/</li>
+                                <li><a href="javascript:;">16m²</a></li>
+                                <li>/</li>
+                                <li><a href="javascript:;">18-20m²</a></li>
+                                <li>/</li>
+                                <li><a href="javascript:;">18m²</a></li>
+                                <li>/</li>
+                                <li><a href="javascript:;">22m²</a></li>
+                                <li>/</li>
+                                <li><a href="javascript:;">12-16m²</a></li>
+                                <li>/</li>
+                                <li><a href="javascript:;">16-20m²</a></li>
+                                <li>/</li>
+                                <li><a href="javascript:;">20-24m²</a></li>
+                                <li>/</li>
+                                <li><a href="javascript:;">24m²以上</a></li>
+                            </ul>
+                            <div class="nav-two-img">
+                                <a href="javascript:;"><img src="./images/house/nav-1.jpg" alt=""></a>
+                                <a href="javascript:;"><img src="./images/house/nav-2.jpg" alt=""></a>
+                            </div>
+                        </div>
+                    </li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </div>
             </div>
         </div>
     </div>
