--- a/01.html
+++ b/01.html
@@ -5,10 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./lib/Animate/animate.min.css">
+    <style>
+        div {
+            animation-delay: 5s;
+        }
+    </style>
 </head>
 
 <body>
-    <img src="../images/house/slider-1.jpg" alt="">
+    <div class="animated fadeInUp">我的</div>
 </body>
 
 </html>
