--- a/project.html
+++ b/project.html
@@ -118,9 +118,238 @@
     </div>
     <!-- 第一个图 -->
     <div class="project-top">
+    </div>
+    <!-- 简介 -->
+    <div class="project-intro">
+        <div class="container">
+            <div class="project-intro-one">
+                <p>全友家居</p>
+                <p>作为中国民用家具的行业领军品牌</p>
+            </div>
+            <div class="project-intro-two">
+                <p>为顺应全球家具产业链转移的趋势，部署全面发展的品牌战略，针对目前快速增长的商业家具需求</p>
+                <p>于2013年5月正式成立了工程项目部</p>
+                <p>专注于服务于民建、酒店、餐饮以及办公写字楼等大型的工程项目。</p>
+            </div>
+        </div>
+    </div>
+    <!-- 时间 -->
+    <div class="project-timer">
+        <div class="container">
+            <div class="project-timer-top clearfix">
+                <img src="./images/project/pic-2013.png" alt="">
+                <span>年</span>
+                <p>成立至今</p>
+            </div>
+            <div class="project-timer-bottom">
+                <p>全友家居工程项目部</p>
+                <p>已为万千客户提供了一站式的整体工程项目解决方案</p>
+            </div>
+            <div class="project-timer-img">
 
+            </div>
+        </div>
+    </div>
+    <!-- 轮播图 -->
+    <div class="project-slider">
+        <div class="container">
+            <div class="project-slider-title">
+                <img src="./images/project/case-show.png" alt="">
+            </div>
+            <div class="project-slider-nav clearfix">
+                <a href="javascript:;">民建案例
+                    <div class="slider-one">
+                        <ul class="clearfix">
+                            <li><img src="./images/project/slider-1.jpg" alt=""></li>
+                            <li><img src="./images/project/slider-2.jpg" alt=""></li>
+                            <li><img src="./images/project/slider-3.jpg" alt=""></li>
+                            <li><img src="./images/project/slider-4.jpg" alt=""></li>
+                            <li><img src="./images/project/slider-5.jpg" alt=""></li>
+                            <li><img src="./images/project/slider-7.jpg" alt=""></li>
+                            <li><img src="./images/project/slider-8.jpg" alt=""></li>
+                            <li><img src="./images/project/slider-9.jpg" alt=""></li>
+                        </ul>
+                    </div>
+                </a>
+                <a href="javascript:;">酒店案例
+                    <div class="slider-one">
+                        <ul class="clearfix">
+                            <li><img src="./images/project/slider-10.jpg" alt=""></li>
+                            <li><img src="./images/project/slider-11.jpg" alt=""></li>
+                            <li><img src="./images/project/slider-12.jpg" alt=""></li>
+                            <li><img src="./images/project/slider-13.jpg" alt=""></li>
+                            <li><img src="./images/project/slider-14.jpg" alt=""></li>
+                            <li><img src="./images/project/slider-15.jpg" alt=""></li>
+                            <li><img src="./images/project/slider-16.jpg" alt=""></li>
+                            <li><img src="./images/project/slider-17.jpg" alt=""></li>
+                        </ul>
+                    </div>
+                </a>
+                <a href="javascript:;">餐饮案例
+                    <div class="slider-one">
+                        <ul class="clearfix">
+                            <li><img src="./images/project/slider-18.jpg" alt=""></li>
+                            <li><img src="./images/project/slider-19.jpg" alt=""></li>
+                            <li><img src="./images/project/slider-20.jpg" alt=""></li>
+                            <li><img src="./images/project/slider-21.jpg" alt=""></li>
+                        </ul>
+                    </div>
+                </a>
+                <a href="javascript:;">办公案例
+                    <div class="slider-one">
+                        <ul class="clearfix">
+                            <li><img src="./images/project/slider-22.jpg" alt=""></li>
+                            <li><img src="./images/project/slider-23.jpg" alt=""></li>
+                            <li><img src="./images/project/slider-24.jpg" alt=""></li>
+                            <li><img src="./images/project/slider-25.jpg" alt=""></li>
+                            <li><img src="./images/project/slider-26.jpg" alt=""></li>
+                            <li><img src="./images/project/slider-27.jpg" alt=""></li>
+                            <li><img src="./images/project/slider-28.jpg" alt=""></li>
+                            <li><img src="./images/project/slider-26.jpg" alt=""></li>
+                        </ul>
+                    </div>
+                </a>
+            </div>
+            <div class="project-slider-main clearfix">
+                <ul class="clearfix">
+                    <li><img src="./images/project/slider-1.jpg" alt=""></li>
+                    <li><img src="./images/project/slider-2.jpg" alt=""></li>
+                    <li><img src="./images/project/slider-3.jpg" alt=""></li>
+                    <li><img src="./images/project/slider-4.jpg" alt=""></li>
+                    <li><img src="./images/project/slider-5.jpg" alt=""></li>
+                    <li><img src="./images/project/slider-7.jpg" alt=""></li>
+                    <li><img src="./images/project/slider-8.jpg" alt=""></li>
+                    <li><img src="./images/project/slider-9.jpg" alt=""></li>
+                </ul>
+                <ol></ol>
+            </div>
+            <a href="javascript:;" class="prev"></a>
+            <a href="javascript:;" class="next"></a>
+        </div>
+    </div>
+    <!-- 我们的服务 -->
+    <div class="project-ser">
+        <div class="container">
+            <div class="project-ser-one">
+                我们的服务
+            </div>
+            <div class="project-ser-two">
+                <div class="project-ser-two-top">
+                    <p>我们为客户提供符合全友绿色产业链标准的优质工程家具系列</p>
+                    <p>提供方案咨询、方案设计、产品设计开发、高效运营服务为一体的整体工程项目解决方案</p>
+                    <p>如有需要，请直接与我们联系Email：kf@quanyou.com.cn</p>
+                </div>
+                <div class="project-ser-two-bottom">
+                    <p>备注：请将合作需求及相关资料一并随邮件发送</p>
+                    <p>相关工作人员会及时与您联系</p>
+                </div>
+            </div>
+            <div class="project-ser-three">
+                <img src="./images/project/icon-grop1.png" alt="">
+            </div>
+        </div>
+    </div>
+    <!-- 底部 -->
+    <div class="qy-floor clearfix">
+        <div class="container">
+            <div class="qy-floor-one">
+                <a href="javascript:;"></a>
+                <div></div>
+            </div>
+            <div class="qy-floor-two clearfix">
+                <div class="qy-floor-two-one">
+                    <li>所有产品</li>
+                    <li>
+                        <a href="javascript:;">产品中心</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">适合你的家具</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">附近的门店</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">防伪查询</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">产品鉴赏</a>
+                    </li>
+                </div>
+                <div class="qy-floor-two-one">
+                    <li>工程项目</li>
+                    <li>
+                        <a href="javascript:;">项目介绍</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">案例展示</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">我们的服务</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">联系我们</a>
+                    </li>
+                </div>
+                <div class="qy-floor-two-one">
+                    <li>幸福服务365</li>
+                    <li>
+                        <a href="javascript:;">服务介绍</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">服务流程</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">在线报修</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">防伪查询</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">常见问题</a>
+                    </li>
+                </div>
+                <div class="qy-floor-two-one">
+                    <li>联系我们</li>
+                    <li>
+                        <a href="javascript:;">我要买家具</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">我要提建议</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">我想加入全友</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">我想加盟门店</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">我想工程合作</a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">我想媒体合作</a>
+                    </li>
+                </div>
+            </div>
+            <div class="qy-floor-three">
+                <div class="qy-floor-three-one">
+                    <a href="javascript:;"></a>
+                    <a href="javascript:;"></a>
+                    <a href="javascript:;"></a>
+                    <a href="javascript:;"></a>
+                </div>
+                <div class="qy-floor-three-two">
+
+                </div>
+                <div class="qy-floor-three-three">
+                    关注全友人力<br> 了解更多招聘信息
+                    <a href="javascript:;">蜀ICP备11013304号-1</a>
+                </div>
+            </div>
+        </div>
+        <div class="qy-floor-bottom"></div>
     </div>
     <script src="./lib/jquery/jquery-3.4.1.min.js"></script>
+    <script src="./js/animate.js"></script>
     <script src="./js/project.js"></script>
 </body>
 
