--- a/01.html
+++ b/01.html
@@ -9,12 +9,19 @@
     <style>
         div {
             animation-delay: 5s;
+            width: 100px;
+            height: 100px;
+            background-color: brown;
         }
     </style>
 </head>
 
 <body>
     <div class="animated fadeInUp">我的</div>
+    <script src="./lib/jquery/jquery-3.4.1.min.js"></script>
+    <script>
+        $('div').width(200)
+    </script>
 </body>
 
 </html>
